--- a/docker/hooks/build
+++ b/docker/hooks/build
@@ -2,7 +2,7 @@
 set -ex
 
 docker image build \
-    --build-arg username=ai4copernicus \
+    --build-arg username=ai4cop \
     --build-arg uid=1000 \
     --build-arg gid=100 \
     --tag "$DOCKER_REPO:latest" \
